objects/niq__Product_Mapping__c.object
<CustomObject>
    <description>This object enables a financial institution to categorize each product in their catalog to standardize data.</description>
    <fields>
        <fullName>niq__Category__c</fullName>
        <description>Administrators populate this optional picklist field to set a category for the product.</description>
        <inlineHelpText>Select a category</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Residential Real Estate</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__Collateral_Type__c</fullName>
        <description>--DEPRECATED-- Administrators populate this required picklist field to set a collateral type.</description>
        <inlineHelpText>Select a collateral type</inlineHelpText>
        <label>-D Collateral Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Insights_Product_Category__c</fullName>
        <description>Administrators populate this optional picklist field to map a product to a standardized product category expected by a model, or to mark the product as excluded. By default, the value is blank.</description>
        <inlineHelpText>Select the standardized product category.</inlineHelpText>
        <label>nCino Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>term_loan</fullName>
                    <label>Term Loan</label>
                </value>
                <value>
                    <fullName>revolving_line_of_credit</fullName>
                    <label>Revolving Line of Credit</label>
                </value>
                <value>
                    <fullName>non_revolving_line_of_credit</fullName>
                    <label>Non-Revolving Line of Credit</label>
                </value>
                <value>
                    <fullName>exclude</fullName>
                    <label>Exclude</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__Is_Indirect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this required boolean field to indicate that the product is indirect. By default, it is false.</description>
        <label>Is Indirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>niq__Lien_Position__c</fullName>
        <description>Administrators populate this optional picklist field to set a lien position for this product.</description>
        <inlineHelpText>Select a lien position</inlineHelpText>
        <label>Lien Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__Prediction_Collateral_Type__c</fullName>
        <description>--DEPRECATED-- Administrators populate this required field with the expected collateral type for the corresponding product.</description>
        <inlineHelpText>Select a collateral type</inlineHelpText>
        <label>-D Prediction Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential Single-Family</fullName>
                </value>
                <value>
                    <fullName>Residential Condo</fullName>
                </value>
                <value>
                    <fullName>Residential Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Residential Lot/Land</fullName>
                </value>
                <value>
                    <fullName>New Car</fullName>
                </value>
                <value>
                    <fullName>Used Car</fullName>
                </value>
                <value>
                    <fullName>Other Auto - RV, Boat, Etc.</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Other CRE</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Commercial Lot/Land</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this required lookup field with a product.</description>
        <inlineHelpText>Select a product</inlineHelpText>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Product</relationshipLabel>
        <relationshipName>Product</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__Subcategory__c</fullName>
        <description>Administrators populate this optional picklist field to set a subcategory for this product.</description>
        <inlineHelpText>Select a subcategory</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Commercial Dev.</fullName>
                </value>
                <value>
                    <fullName>Commercial Lot</fullName>
                </value>
                <value>
                    <fullName>Commercial Workout</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Land &amp; Farm</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Other CRE</fullName>
                </value>
                <value>
                    <fullName>Residential Dev</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Business Credit Card</fullName>
                </value>
                <value>
                    <fullName>Business New Auto</fullName>
                </value>
                <value>
                    <fullName>Business Secured</fullName>
                </value>
                <value>
                    <fullName>Business Unsecured</fullName>
                </value>
                <value>
                    <fullName>Business Used Auto</fullName>
                </value>
                <value>
                    <fullName>Business Workout</fullName>
                </value>
                <value>
                    <fullName>Other Business</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>First Mortgage</fullName>
                </value>
                <value>
                    <fullName>Other Residential</fullName>
                </value>
                <value>
                    <fullName>Residential Construction</fullName>
                </value>
                <value>
                    <fullName>Residential Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Residential Lot</fullName>
                </value>
                <value>
                    <fullName>Residential Workout</fullName>
                </value>
                <value>
                    <fullName>Second Mortgage</fullName>
                </value>
                <value>
                    <fullName>Consumer Credit Card</fullName>
                </value>
                <value>
                    <fullName>Consumer New Auto</fullName>
                </value>
                <value>
                    <fullName>Consumer Used Auto</fullName>
                </value>
                <value>
                    <fullName>Consumer Workout</fullName>
                </value>
                <value>
                    <fullName>Other Secured Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__lookupKey__c</fullName>
        <description>The user populates this numeric field with a unique lookup key.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Mapping</label>
    <nameField>
        <displayFormat>PM-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>